--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,24 @@ server.port=8088
 
 spring.application.name=xuans-client
 
+feign.httpclient.connection-timeout=5000
+feign.okhttp.enabled=true
+
 ## Eureka
 eureka.instance.leaseRenewalIntervalInSeconds= 30
 eureka.instance.prefer-ip-address=true
-eureka.client.registryFetchIntervalSeconds= 15
+eureka.client.registryFetchIntervalSeconds=15
 eureka.client.security.basic.user=admin
 eureka.client.security.basic.password=1234
 eureka.client.serviceUrl.defaultZone=http://${eureka.client.security.basic.user}:${eureka.client.security.basic.password}@localhost:8761/eureka/
+
+## swagger
+swagger.base-package=club.yuxuan.yun.client
+swagger.exclude-path=/error,/actuator/**
+swagger.contact.name=yuxuan
+swagger.title=${spring.application.name}
+swagger.ui-config.json-editor=true
+swagger.globalOperationParameters.name=SERVICE-AUTHENTICATION
+swagger.globalOperationParameters.modelRef=string
+swagger.globalOperationParameters.parameterType=header
+swagger.globalOperationParameters.required=false
