--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=8088
 
+java.version=8
+project.build.sourceEncoding=UTF-8
+project.reporting.outputEncoding=UTF-8
+
 spring.application.name=xuans-client
 
 feign.httpclient.connection-timeout=5000
@@ -17,9 +21,15 @@ eureka.client.serviceUrl.defaultZone=http://${eureka.client.security.basic.user}
 swagger.base-package=club.yuxuan.yun.client
 swagger.exclude-path=/error,/actuator/**
 swagger.contact.name=yuxuan
-swagger.title=${spring.application.name}
+swagger.title=${spring.application.name}-Project
 swagger.ui-config.json-editor=true
-swagger.globalOperationParameters.name=SERVICE-AUTHENTICATION
-swagger.globalOperationParameters.modelRef=string
-swagger.globalOperationParameters.parameterType=header
-swagger.globalOperationParameters.required=false
+swagger.globalOperationParameters[0].name=SERVICE-AUTHENTICATION
+swagger.globalOperationParameters[0].description=token
+swagger.globalOperationParameters[0].modelRef=string
+swagger.globalOperationParameters[0].parameterType=header
+swagger.globalOperationParameters[0].required=false
+#swagger.globalOperationParameters[1].name=TEST-USER-ID
+#swagger.globalOperationParameters[1].description=测试用户ID
+#swagger.globalOperationParameters[1].modelRef=string
+#swagger.globalOperationParameters[1].parameterType=header
+#swagger.globalOperationParameters[1].required=false
