--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ project.build.sourceEncoding=UTF-8
 project.reporting.outputEncoding=UTF-8
 
 spring.application.name=xuans-client
+spring.main.allow-bean-definition-overriding=true
 
 feign.httpclient.connection-timeout=5000
 feign.okhttp.enabled=true
